--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -17,9 +17,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Runs the Super-Linter action
-      - name: Run Super-Linter
-        uses: github/super-linter@v3
-        env:
-          DEFAULT_BRANCH: main
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: npm run lint
