--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "commit": "cz",
     "lint": "eslint --fix --ext .js .",
+    "unit-test:watch": "jest . --watch-all",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,7 +26,9 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^26.6.3",
     "prettier": "^2.1.2"
   },
   "config": {
