feat(database): initial config for database

--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "knex": "^0.21.12"
   }
 }
