--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     }
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "knex": "^0.21.12"
+    "knex": "^0.21.12",
+    "mysql": "^2.18.1"
   }
 }
