--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,7 @@
     "node": true,
     "jest/globals": true
   },
-  "extends": ["prettier", "airbnb-base", "plugin:jest/recommended"],
+  "extends": ["airbnb-base", "plugin:jest/recommended", "prettier"],
   "plugins": ["prettier", "jest"],
   "parserOptions": {
     "ecmaVersion": 12
@@ -17,6 +17,7 @@
     "jest/no-focused-tests": "error",
     "jest/no-identical-title": "error",
     "jest/prefer-to-have-length": "warn",
-    "jest/valid-expect": "error"
+    "jest/valid-expect": "error",
+    "object-curly-newline": "warn"
   }
 }
