--- a/.github/workflows/quality-gate.yml
+++ b/.github/workflows/quality-gate.yml
@@ -1,7 +1,8 @@
 name: quality-gate
 
-# Run this workflow every time a new commit pushed to your repository
-on: push
+on:
+  pull_request:
+    types: [synchronize, opened, reopened, ready_for_review]
 
 jobs:
   style-check:
