--- a/.github/workflows/quality-gate.yml
+++ b/.github/workflows/quality-gate.yml
@@ -18,3 +18,6 @@ jobs:
 
       - name: Run a one-line script
         run: npm run lint
+
+      - name: Run a one-line script
+        run: npm run unit-test
